--- a/doc/tree.tex
+++ b/doc/tree.tex
@@ -25,9 +25,7 @@
 \begin{document}
 \title{{\tt tree.hh} documentation}
 \author{Kasper Peeters}
-\address{1}{{\it MPI/AEI f\"ur Gravitationsphysik, Am M\"uhlenberg 1, 14476
-Potsdam, Germany}}
-\email{k.peeters@damtp.cam.ac.uk}
+\email{kasper.peeters@gmail.com}
 \maketitle
 \begin{abstract}
 The {\tt tree.hh} library for C++ provides an STL-like container class
@@ -36,11 +34,14 @@ types of iterators are provided (post-order, pre-order, and
 others). Where possible the access methods are compatible with the STL
 or alternative algorithms are available. The library is available
 under the terms of the GNU General Public License.\\[3ex]
-Code and examples available at: {\tt http://www.damtp.cam.ac.uk/user/kp229/tree/}\\[3ex]
-{\bf This documentation is not yet complete. Refer to the {\tt
+Code and examples available at: {\tt http://tree.phi-sci.com/}\\[3ex]
+{\bf This documentation is not yet entirely complete. Refer to the {\tt
 tree.hh} header file for a full list of member functions.}
 \end{abstract}
+\vfill
 \maketoc
+\eject
+
 \begin{sectionunit}
 \title{Overview}
 \maketitle
