Fixed stupid leftover debugging.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Brown paper bag release 2.81.
+
 2011-08-23  Kasper Peeters  <kasper@phi-sci.com>
 
 	* Released 2.8
