--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* Released 3.0
 
-	* Added move constructor and move_out, move_in, move_in_below.
+	* Added move constructor and move_out, move_in, move_in_as_nth_child.
 
 2013-09-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
