--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-01-23  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Released 3.4
+
+	* Added move semantics version of prepend_child.
+
 2015-07-13  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Released 3.2
