--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018-04-23  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Release 3.8.
+
+	* Make fixed-depth iterators start at the first node in a range of
+	siblings.
+
 2018-01-30  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.6.
