--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-04-25  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Add logic to generate a path from an itertor and vice versa.
+
 2018-04-23  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.8.
