--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-02-27  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Release 3.10
+
+	* Fix a bug in move assignment operator.
+
 2018-04-25  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Add logic to generate a path from an itertor and vice versa.
