--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-05-28  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Release 3.13
+
+	* Add missing 'move_in_below' function.
+
 2019-03-18  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.11
