--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020-11-07  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Release 3.16
+
+	* Fix error in move assignment operator which caused tree
+	corruptioin (thanks to Trevor Hickey for reporting the bug).
+
 2020-10-26  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.15
@@ -6,7 +13,7 @@
 	of calling them directly.
 
 	* Make `parent` throw an exception rather than bailing out with an
-	assert. 
+	assert.
 
 2019-09-21  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
