--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,16 @@
+2020-11-07  Trevor Hickey  <TrevorJamesHickey@gmail.com>
+
+	* Release 3.17
+
+	* Fix error in move constructor which caused tree
+	corruption (similar bug from 3.16).
+
 2020-11-07  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.16
 
 	* Fix error in move assignment operator which caused tree
-	corruptioin (thanks to Trevor Hickey for reporting the bug).
+	corruption (thanks to Trevor Hickey for reporting the bug).
 
 2020-10-26  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
