--- a/doc/tree.tex
+++ b/doc/tree.tex
@@ -1,7 +1,6 @@
-\documentclass[11pt]{kasper}
-% 
-% If you do not have 'kasper.cls', see
-% http://www.damtp.cam.ac.uk/user/kp229/texstuff .
+\documentclass[11pt]{article}
+\usepackage[scale=.8]{geometry}
+
 
 \usepackage{makeidx}
 \usepackage{verbatim}
@@ -24,8 +23,7 @@
 
 \begin{document}
 \title{{\tt tree.hh} documentation}
-\author{Kasper Peeters}
-\email{kasper.peeters@gmail.com}
+\author{Kasper Peeters, kasper.peeters@gmail.com}
 \maketitle
 \begin{abstract}
 The {\tt tree.hh} library for C++ provides an STL-like container class
@@ -39,7 +37,7 @@ Code and examples available at: {\tt http://tree.phi-sci.com/}\\[3ex]
 tree.hh} header file for a full list of member functions.}
 \end{abstract}
 \vfill
-\maketoc
+\tableofcontents
 \eject
 
 \begin{sectionunit}
