--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-02-13  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Include <string> to avoid compilation errors.
+
 2020-11-07  Kasper Peeters  <kasper.peeters@phi-sci.com>
 
 	* Release 3.17
